Minor changes for curseforge publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,5 +26,5 @@ caffeine_version = 3.2.3
 
 # Publishing
 modrinth_project_id = 3XWY8ZZP
-curseforge_project_id = CHANGE_ME
+curseforge_project_id = 1465038
 github_repo = edward3h/worn-path
